--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -1107,11 +1107,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este algoritmo realiza o agrupamento hierárquico de sequências de DNA, utilizando a distância de Levenstein (lecionada em aula) para calcular a similaridade entre as sequências. O objetivo é gerar um dendrograma que ilustra como as sequências são agrupadas com base nas suas distâncias.\n",
+    "São usados três pacotes principais. O numpy (np) é utilizado para criar e manipular a matriz de distâncias entre as sequências de DNA, permitindo o cálculo eficiente de distâncias entre os pares de sequências. O scipy.cluster.hierarchy (sch) contém a função linkage, que executa o agrupamento hierárquico com base nas distâncias calculadas. Finalmente, o matplotlib.pyplot (plt) é utilizado para exibir o dendrograma resultante, permitindo uma visualização clara do processo de agrupamento. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import scipy.cluster.hierarchy as sch\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. ___Cálculo de distâncias___\n",
+    "\n",
+    "A distância entre pares de sequências é calculada utilizando o algoritmo de Levenstein, que determina o número mínimo de operações (inserções, deleções e substituições) necessárias para transformar uma sequência noutra.\n",
+    "Função distancia: Calcula a distância de Levenstein entre duas sequências de DNA.\n",
+    "\n",
+    "        Função distancia(s1, s2):\n",
+    "        s1 e s2: Duas strings que representam as sequências de DNA.\n",
+    "\n",
+    "O algoritmo começa por criar uma matriz de tamanho (len(s1)+1) x (len(s2)+1). As bordas da matriz são preenchidas com os custos de inserções e deleções. A seguir, a matriz é preenchida iterativamente, calculando o custo mínimo de cada posição com base nas operações de substituição, inserção e deleção. O valor no canto inferior direito da matriz será a distância final entre as duas sequências.\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distancia(s1, s2):\n",
+    "    \"\"\"\n",
+    "    Calcula a distância de Levenstein (lecionada em aula) entre duas sequências\n",
+    "    \"\"\"\n",
+    "    mat = [[0] * (len(s2) + 1) for _ in range(len(s1) + 1)]\n",
+    "    for i in range(len(s1) + 1):\n",
+    "        for j in range(len(s2) + 1):\n",
+    "            if i == 0:\n",
+    "                mat[i][j] = j\n",
+    "            elif j == 0:\n",
+    "                mat[i][j] = i\n",
+    "            else:\n",
+    "                mat[i][j] = min(mat[i - 1][j] + 1,\n",
+    "                                mat[i][j - 1] + 1,\n",
+    "                                mat[i - 1][j - 1] + (0 if s1[i - 1] == s2[j - 1] else 1))\n",
+    "    return mat[len(s1)][len(s2)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. ___Matriz de Distâncias___\n",
+    "\n",
+    "A função cria uma matriz simétrica que armazena as distâncias entre todas as combinações de sequências na lista fornecida.\n",
+    "Função matriz_distancias: Calcula a matriz de distâncias entre todas as sequências.\n",
+    "\n",
+    "        Função matriz_distancias(lista_seqs):\n",
+    "        lista_seqs: Lista de strings que representam as sequências de DNA.\n",
+    "\n",
+    "A função começa por iniciar uma matriz de zeros de tamanho n x n, onde n é o número de sequências. Para cada par de sequências, a função distancia é chamada para calcular a distância de Levenstein e preencher a matriz. Como a matriz é simétrica, a distância entre seq1 e seq2 é atribuída à posição (i, j) e também à posição (j, i)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matriz_distancias(lista_seqs):\n",
+    "    \"\"\" \n",
+    "    Cria uma matriz de distências entre todas as combinações de sequências\n",
+    "    \"\"\"\n",
+    "    n = len(lista_seqs)\n",
+    "    dist_matriz = np.zeros((n, n))\n",
+    "    for i in range(n):\n",
+    "        for j in range(i + 1, n):\n",
+    "            dist_matriz[i][j] = dist_matriz[j][i] = distancia(lista_seqs[i], lista_seqs[j])\n",
+    "    return dist_matriz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. ___Agrupamento Hierárquico e Visualização___ :\n",
+    "\n",
+    "O agrupamento hierárquico é realizado utilizando a função linkage da biblioteca scipy.cluster.hierarchy (sch), que calcula a matriz de ligação baseada nas distâncias entre as sequências. O método de agrupamento utilizado é o \"average\", que calcula a distância média entre clusters. Após calcular a matriz de distâncias com a função matriz_distancias, ela é convertida para o formato compacto usando squareform de scipy.cluster.hierarchy.distance, transformando a matriz de distâncias num vetor compacto. Em seguida, a função linkage é aplicada para calcular a matriz de ligação, essencial para o agrupamento hierárquico. Com a matriz de ligação, o dendrograma é gerado utilizando a função dendrogram da mesma biblioteca. Este dendrograma é um gráfico que visualiza como as sequências foram agrupadas ao longo do processo. O eixo horizontal do gráfico exibe as sequências, enquanto o eixo vertical mostra as distâncias entre os grupos de sequências. Por fim, a visualização do dendrograma é exibida com a função show() da biblioteca matplotlib, permitindo a interpretação visual dos agrupamentos formados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gerar_dendrograma(lista_seqs):\n",
+    "    \"\"\"\n",
+    "    Gera e exibe um dendograma a partir das distâncias entre sequências previamente calculadas\n",
+    "    \"\"\"\n",
+    "    lista_seqs = [seq.upper() for seq in lista_seqs]  \n",
+    "    dist_matriz = matriz_distancias(lista_seqs)\n",
+    "    dist_compacta = sch.distance.squareform(dist_matriz)\n",
+    "    matriz_ligacao = sch.linkage(dist_compacta, method='average') # A função `linkage` agrupa as sequências com base nas distâncias e cria a matriz de ligação.\n",
+    "\n",
+    "    plt.figure(figsize=(10, 7))\n",
+    "    sch.dendrogram(matriz_ligacao, labels=lista_seqs)\n",
+    "    plt.title(\"Dendrograma de Sequências\")\n",
+    "    plt.xlabel(\"Sequências\")\n",
+    "    plt.ylabel(\"Distância\")\n",
+    "    plt.show()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    sequencias = \"CCG GT GTA AAT AT ACG ACGT\".split()\n",
+    "    print(\"Matriz de Distâncias:\")\n",
+    "    D = matriz_distancias(sequencias)\n",
+    "    print(D)\n",
+    "    print(\"\\nDendrograma:\")\n",
+    "    gerar_dendrograma(sequencias)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Teste das funções para a Árvore Filogenética**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest\n",
+    "\n",
+    "class TestFuncoes(unittest.TestCase):\n",
+    "\n",
+    "    def test_distancia(self):\n",
+    "        # Teste com sequências iguais\n",
+    "        self.assertEqual(distancia(\"ATCG\", \"ATCG\"), 0)\n",
+    "        \n",
+    "        # Teste com sequências completamente diferentes\n",
+    "        self.assertEqual(distancia(\"AAA\", \"TTT\"), 3)\n",
+    "\n",
+    "    def test_matriz_distancias(self):\n",
+    "        sequencias = [\"AAA\", \"AAT\", \"ATT\", \"TTT\"]\n",
+    "        matriz = matriz_distancias(sequencias)\n",
+    "        \n",
+    "        # Verifica se a matriz é simétrica\n",
+    "        self.assertTrue(np.allclose(matriz, matriz.T))\n",
+    "        \n",
+    "        # Verifica se a diagonal principal é zero\n",
+    "        self.assertTrue(np.allclose(np.diag(matriz), 0))\n",
+    "        \n",
+    "        # Verifica valores específicos\n",
+    "        self.assertEqual(matriz[0][1], 1)  # Distância entre AAA e AAT\n",
+    "        self.assertEqual(matriz[0][3], 3)  # Distância entre AAA e TTT\n",
+    "\n",
+    "    def test_gerar_dendrograma(self):\n",
+    "        sequencias = [\"CCG\", \"GT\", \"GTA\", \"AAT\", \"AT\", \"ACG\", \"ACGT\"]\n",
+    "        \n",
+    "        # Verifica se a função não originou exceções\n",
+    "        try:\n",
+    "            gerar_dendrograma(sequencias)\n",
+    "        except Exception as e:\n",
+    "            self.fail(f\"gerar_dendrograma lançou uma exceção inesperada: {e}\")\n",
+    "        \n",
+    "        # Verifica se um gráfico foi criado\n",
+    "        self.assertTrue(plt.gcf().number > 0)\n",
+    "        \n",
+    "        # Limpa a figura atual para não interferir com outros testes\n",
+    "        plt.close()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main(argv=[''], exit=False)"
+   ]
   }
  ],
  "metadata": {
@@ -1130,7 +1312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
